# SoftUni_Python_path-from_basic_to_OOP-

./: README.md  very usefull functions.py
01_Basic_syntax_conditional_statement_and_loops/: 01-Basic-Syntax-Conditional-Statements-and-Loops-Exercise.docx  01_Biggest_of_Three_Numbers.py  03_Word_Reverse.py  04_Number_Between_1_and_100.py  08_Mutate_Strings.py  5_Patterns.py  E01_Jennys_secret_message.py  E02_Drink_Something.py  E03_Leonardo_DiCaprio_Oscars.py  E04_Double_Char.py  E05_Count_Sheep.py  E06_Next_Happy_Year.py  E07_Maximum_Multiple.py  E08_Mutate_Strings.py  U2_01_Find_the_Largest.py  U2_02_Find_the_Capitals.py  U2_03_Wolf_in_Sheeps_Clothing.py  U2_04_Sum_of_a_Beach.py  U2_05_How_Much_Coffee_Do_You_Need.py  U_05_Cant_Sleep_Count_Sheep.py  U_06_Next_Happy_Year.py  U_08_Mutate_Strings.py  U_1_Jenny's_Secret_Message.py  U_3_Leonardo_DiCaprio_Oscars.py  U_7_Maximum_Multiple.py  U_9_Easter_Cozonacs.py  test.py  ~$-Basic-Syntax-Conditional-Statements-and-Loops-Exercise.docx
02._Data_Types_and_Variables/: 02_Centuries_to_Minutes.py  03_Special_Numbers.py  U2_01_Biggest_of_3_Numbers.py  U2_02_Exchange_Integers.py  U2_03_Prime_number_checker.py  U2_04_Decrypting_Messages.py  U_03_Elevator.py  U_04_Sum_of_Chars.py  (+5 more)
Python-OOP/solid_python_with_Johan_Vergeer/: .editorconfig  .gitignore  pyproject.toml
Python-OOP/solid_python_with_Johan_Vergeer/python_solid_principles/: srp.py
Python-OOP/solid_python_with_Johan_Vergeer/python_solid_principles/product_management_system/: product.py
Python-OOP/solid_python_with_Johan_Vergeer/tests/: test_python_solid_principles.py
(+534 files in other folders)
