[tool.poetry]
name = "python-solid-principles"
version = "0.1.0"
description = ""
authors = ["Johan Vergeer <johanvergeer@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
black = "^20.8b1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
